--- a/Midnight-Gray/gnome-shell/gnome-shell.css
+++ b/Midnight-Gray/gnome-shell/gnome-shell.css
@@ -749,6 +749,9 @@ StScrollBar {
       box-shadow: none;
       border: none;
       border-color: transparent; }
+  #panel .panel-button.clock-display:active > * > *:last-child, #panel .panel-button.clock-display:checked > * > *:last-child {
+    color: #141414;
+    background-color: #969696; }
   #panel #panelActivities.panel-button {
     -natural-hpadding: 12px; }
   #panel .panel-status-indicators-box,
